fix text-wrapper from being too close to the image container

--- a/Song Card/style.css
+++ b/Song Card/style.css
@@ -159,11 +159,15 @@ body {
         width: 95%;
     }
 
+    .text-wrapper {
+        margin-left: 4px;
+    }
+
     .btn-outer-wrapper {
         width: 2.5rem;
         height: 2.5rem;
         position: relative;
-        right: 8px;
+        right: 4px;
     }
 
     .btn-inner-wrapper {
